--- a/ui/package.json
+++ b/ui/package.json
@@ -9,45 +9,47 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^2.0.9",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.13.2",
-    "bootstrap": "^4.6.1",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap": "^5.3.8",
     "core-js": "^3.47.0",
     "highlight.js": "^11.11.1",
+    "mitt": "^3.0.1",
     "moment": "^2.30.1",
+    "pinia": "^3.0.4",
     "reflect-metadata": "^0.2.2",
-    "vue": "^2.7.16",
+    "vue": "^3.5.25",
     "vue-class-component": "^7.2.6",
-    "vue-highlight.js": "^4.0.1-beta",
+    "vue-highlight.js": "^3.1.0",
     "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.6.5",
+    "vue-router": "^4.6.4",
     "vue-social-sharing": "^3.0.9",
     "vue-typescript-inject": "^0.3.1",
     "vue2-filters": "^0.14.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "@vue/cli-plugin-babel": "~5.0.9",
     "@vue/cli-plugin-eslint": "~5.0.9",
     "@vue/cli-plugin-typescript": "~5.0.9",
     "@vue/cli-service": "^5.0.9",
-    "@vue/eslint-config-standard": "^6.1.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "eslint": "^7.0.0",
+    "@vue/eslint-config-standard": "^9.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-plugin-vue": "^10.6.2",
     "sass": "^1.96.0",
-    "sass-loader": "^16.0",
-    "typescript": "~4.2.4",
+    "sass-loader": "^16.0.6",
+    "typescript": "~5.9.3",
     "vue-template-compiler": "^2.7.16"
   },
   "eslintConfig": {
