--- a/ui/package.json
+++ b/ui/package.json
@@ -50,7 +50,8 @@
     "sass": "^1.96.0",
     "sass-loader": "^16.0.6",
     "typescript": "~5.9.3",
-    "vue-template-compiler": "^2.7.16"
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^3.1.8"
   },
   "eslintConfig": {
     "root": true,
