--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
+    "@marcoschulte/vue3-progress": "^0.0.9",
     "@popperjs/core": "^2.11.8",
+    "@types/bootstrap": "^5.2.10",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "core-js": "^3.47.0",
@@ -24,13 +26,12 @@
     "reflect-metadata": "^0.2.2",
     "vue": "^3.5.25",
     "vue-class-component": "^7.2.6",
-    "vue-highlight.js": "^3.1.0",
-    "vue-progressbar": "^0.7.5",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.6.4",
     "vue-social-sharing": "^3.0.9",
     "vue-typescript-inject": "^0.3.1",
-    "vue2-filters": "^0.14.0"
+    "vue2-filters": "^0.14.0",
+    "vue3-highlightjs": "^1.0.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.49.0",
@@ -52,21 +53,6 @@
     "typescript": "~5.9.3",
     "vue-template-compiler": "^2.7.16",
     "vue-tsc": "^3.1.8"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/standard",
-      "@vue/typescript/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2020
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
