--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
     "@vue/cli-service": "^5.0.9",
     "@vue/eslint-config-standard": "^9.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/compiler-sfc": "^3.5.25",
     "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
@@ -51,7 +52,6 @@
     "sass": "^1.96.0",
     "sass-loader": "^16.0.6",
     "typescript": "~5.9.3",
-    "vue-template-compiler": "^2.7.16",
     "vue-tsc": "^3.1.8"
   },
   "browserslist": [
