--- a/ui/package.json
+++ b/ui/package.json
@@ -36,13 +36,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
-    "@vue/cli-plugin-babel": "~5.0.9",
     "@vue/cli-plugin-eslint": "~5.0.9",
     "@vue/cli-plugin-typescript": "~5.0.9",
     "@vue/cli-service": "^5.0.9",
+    "@vue/compiler-sfc": "^3.5.25",
     "@vue/eslint-config-standard": "^9.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/compiler-sfc": "^3.5.25",
+    "esbuild-loader": "^4.4.0",
     "eslint": "^9.39.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
