--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,15 +2,14 @@ name: PR
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [ linux, macos, windows ]
+        build: [linux, macos, windows]
         include:
           - build: linux
             os: ubuntu-latest
@@ -24,18 +23,16 @@ jobs:
         if: matrix.build == 'linux' # build rust only on linux
         run: rustup update
       - uses: actions/checkout@v4
-      - name: Use Node.js 20.0
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
+      - name: Use Bun
+        uses: oven-sh/setup-bun@v2
       - name: Install Dependencies
         working-directory: ./ui
         run: |
-          npm i -f
-      - name: Node Build
+          bun install --frozen-lockfile
+      - name: Bun Build
         working-directory: ./ui
         run: |
-          npm run build
+          bun run build
       - name: Install LLVM linker (Linux)
         if: matrix.build == 'linux'
         run: |
