--- a/ui/package.json
+++ b/ui/package.json
@@ -17,9 +17,9 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "dayjs": "^1.11.19",
     "highlight.js": "^11.11.1",
     "mitt": "^3.0.1",
-    "moment": "^2.30.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4",
     "vue3-social-sharing": "^1.4.1"
