chore: bump crates to the latest versions and fix oauth2 implementation

--- a/egoroff/migrate/Cargo.toml
+++ b/egoroff/migrate/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 [dependencies]
 kernel = { path = "../kernel" }
 chrono = { workspace = true, default-features = false, features = ["clock", "std"] }
-reqwest = { workspace = true, features = ["json", "rustls-tls"] }
+reqwest = { workspace = true, features = ["json", "rustls"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
