--- a/egoroff/server/Cargo.toml
+++ b/egoroff/server/Cargo.toml
@@ -32,7 +32,7 @@ anyhow = { workspace = true }
 chrono = { workspace = true, default-features = false, features = ["serde", "clock", "std"]}
 oauth2 = {version= "5.0.0", features = ["reqwest"] }
 async-trait = { workspace = true }
-reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls-tls" ] }
+reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls" ] }
 jsonwebtoken = { version = "10.2.0", features = [ "rust_crypto" ]}
 url = { workspace = true }
 thiserror = "2.0.17"
